[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "singapore_bullion_retailers_api"
version = "0.0.1"
authors = [
  { name="Chad Lim Jin Jie", email="chadlimjinjie@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/chadlimjinjie/singapore_bullion_retailers_api"
Issues = "https://github.com/chadlimjinjie/singapore_bullion_retailers_api/issues"

pick a2aadd9 new file:   .pypirc        new file:   LICENSE     modified:   pyproject.toml
pick f50394e deleted:    .pypirc
pick 40dbdc4 Revert "   new file:   .pypirc"
pick 7a842dd new file:   test