[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "singapore_bullion_retailers"
version = "0.0.4"
authors = [
  { name="Chad Lim Jin Jie", email="chadlimjinjie@gmail.com" },
]
description = "A package for accessing Singapore bullion retailers API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/chadlimjinjie/singapore_bullion_retailers"
Issues = "https://github.com/chadlimjinjie/singapore_bullion_retailers/issues"
